add-> verify.html

--- a/index.html
+++ b/index.html
@@ -79,9 +79,8 @@
     <div class="isVerifiedSection">
         <h1>Your Document is Verified!</h1>
         <img src="https://assets.zyrosite.com/Aq20eV79zLfpXV6b/source-dJoG1g8L9nhpnwB4.gif" alt="" style="height: 60px;">
-
-        <button class="verify_btn">CLICK HERE TO VERIFY</button>
-
+        <a href="./verify.html"><button class="verify_btn">CLICK HERE TO VERIFY</button></a>
+        
     </div>
 
 
