--- a/verify.html
+++ b/verify.html
@@ -550,7 +550,7 @@ body{background-color:var(--base-2);color:var(--contrast);}a{color:var(--accent)
 </div>
 
 
-<div class="site-footer grid-container">
+<div class="site-footer grid-container foooter">
 			<footer class="site-info" aria-label="Site"  itemtype="https://schema.org/WPFooter" itemscope>
 			<div class="inside-site-info">
 								<div class="copyright-bar">
@@ -596,6 +596,7 @@ var generatepressMenu = {"toggleOpenedSubMenus":"1","openSubMenuLabel":"Open Sub
                 user.classList.add('hide_user')
                 height.classList.add('remove_height')
             }
+
 
             
 
